static/css/base.css
@import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@400;500;600;700;800;900&family=Raleway&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Pirata+One&display=swap');

/*----- VARIABLES CSS -----*/
/*------Colors------*/
:root {
  --first-color: #EAD5CC;
  --second-color: #4c4036;
  --white-color: #fff; }

/*------Fonts------*/
:root {
  --body-font: 'Raleway', sans-serif;
  --h1-font-size: 2.5rem;
  --h2-font-size: 2.3rem;
  --normal-font-size: 0.93rem;
  --medium-font-size: 1.2rem;
  --big-font-size: 2.7rem;
  --smaller-font-size: 0.75rem; 
}

@media screen and (min-width: 768px) {
    :root {
      --h1-font-size: 4.5rem;
      --h2-font-size: 3.56rem;
      --normal-font-size: 1rem;
      --big-font-size: 10rem;
      --smaller-font-size: 0.813rem; 
    } 
}

/*------Z-index------*/
:root {
  --z-back: -10;
  --z-normal: 1;
  --z-tooltip: 10;
  --z-fixed: 100;
  --z-modal: 1000; 
}

/*----- BASE -----*/
*, ::before, ::after {
  -webkit-box-sizing: border-box;
          box-sizing: border-box; 
}

html{
    scroll-behavior: smooth;
}

body {
  margin: 3rem 0 0 0;
  font-family: var(--body-font);
  font-weight: initial;
  height: calc(100vh - 164px);
}

h1, h2 {
  margin: 0;
  font-weight: initial; }

ul {
  margin: 0;
  padding: 0;
  list-style: none; }

a {
  text-decoration: none !important;
}

img {
  max-width: 100%;
  height: auto; }

p {
  font-size: var(--normal-font-size); 
}

/* ------ Toasts ------ */

.message-container {
    position: fixed;
    top: 72px;
    right: 15px;
    z-index: 99999999999;
}

.custom-toast {
    overflow: visible;
}

.toast-capper {
    height: 2px;
}

/* from CSS-tricks.com: https://css-tricks.com/snippets/css/css-triangle/ */
.arrow-up {
    width: 0; 
    height: 0; 
    border-left: 4px solid transparent;
    border-right: 4px solid transparent; 
    border-bottom: 10px solid black;
    position: absolute;
    top: -10px;
    right: 36px;
}

/* Convenience classes - colors copied from Bootstrap */
.arrow-primary {
    border-bottom-color: #007bff !important;
}

.arrow-secondary {
    border-bottom-color: #6c757d !important;
}

.arrow-success {
    border-bottom-color: #28a745 !important;
}

.arrow-danger {
    border-bottom-color: #dc3545 !important;
}

.arrow-warning {
    border-bottom-color: #ffc107 !important;
}

.arrow-info {
    border-bottom-color: #17a2b8 !important;
}

.arrow-light {
    border-bottom-color: #f8f9fa !important;
}

.arrow-dark {
    border-bottom-color: #343a40 !important;
}

.bag-notification-wrapper {
    height: 100px;
    overflow-x: hidden;
    overflow-y: auto;
}


/* ---- Main nav and header ---- */

.icon {
    align-items: center;
    display: inline-flex;
    justify-content: center;
    height: 1.5rem;
    width: 1.5rem;
}

.logo-font {
    text-transform: uppercase;
}

.main-logo-link {
    width: fit-content;
}

.nav__logo{
    font-size: 2.5rem;
    font-family: 'Pirata One', cursive;
    letter-spacing: .3rem;
    color: var(--second-color);
}

.nav__logo:hover{
    text-decoration: none;
    color: var(--first-color);
}

.nav__bg {
    background-color: var(--white-color);
}

.btn-full {
    background: var(--first-color);
    color: white;
}

.btn-full:hover,
.btn-full:active,
.btn-full:focus {
    background:darkslategray;
    color: var(--white-color);
}

.btn-clear{
    color: var(--second-color);
    background-color:var(--white-color);
    border: 1px solid var(--second-color);
}

.btn-clear:hover{
    color: var(--white-color);
    background-color:var(--second-color);
    border: 1px solid var(--second-color);
}

.text-full {
    color: var(--second-color);
}

.border-full {
    border: 1px solid var(--second-color) !important;
}

.bg-full{
    background: var(--second-color);
}

.nav-link:hover{
    color: var(--first-color);
}

/* ---- Index hero ---- */

.home {
  position: relative;
  display: grid;
  grid-template-rows: 3fr 1fr;
  height: 100vh;
}

.home__primary {
/*Animation*/
    width: 0;
    background-color: var(--first-color);
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    padding-left: 1rem;
    padding-right: 1rem; 
}

.home__title {
    font-family: 'Pirata One', cursive;
    font-size: var(--h1-font-size);
    letter-spacing: .3rem;
    -webkit-writing-mode: vertical-rl;
    -ms-writing-mode: tb-rl;
    writing-mode: vertical-rl;
    -webkit-transform: rotate(180deg);
    transform: rotate(180deg);
    color: var(--white-color);
 }
  .home__img {
    width: 235px;
    /*height: auto;*/
}

.btn__hero{
    background: var(--second-color);
    color: white;
    margin-top: 15px;
}

.btn__hero:hover{
    background: var(--first-color);
    color: black;
}
.home__secondary {
/*Animation*/
    width: 0;
    background-color: var(--white-color);
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center;
    -webkit-box-pack: center;
        -ms-flex-pack: center;
            justify-content: center;
    font-weight: bold;
}

.home__sub {
    font-size: var(--h1-font-size);
    -webkit-text-stroke: 2.3px var(--first-color);
    color: transparent; 
}

/* ---- Landing page About section ---- */

.home__about{
  position: relative;
  display: grid;
  overflow: hidden;
}

.about__img{
 object-fit: cover;
 width: 100%;
 height: 100%;
}

.media-text{
    padding-left: 25px;
    padding-right: 25px;
    background-color: var(--white-color);
    color: var(--white-color);
}
.text__box {
    align-items: center;
    justify-items: center;
}

.media-text h2 {
    font-weight: bold;
    font-family: 'Pirata One', cursive;
    letter-spacing: 0.1em;
}

.media-text p{
    line-height: 2.5;
    font-weight: 500;
}

/* ---- Landing page Bottom Banner ---- */


.bg-clear {
    background-color: var(--first-color);
}

.security__icons{
    color: var(--first-color);
}

.security__details p {
    font-size: var(--medium-font-size);
    font-weight: bolder;
}

/* ---- Product cards ---- */

#featured h2{
   letter-spacing: 0.1em;
   font-weight: bold;
}
.card__wrapper{
  height: 545px;
  background: white;
  position: relative;
  overflow: hidden;
  border-radius: 10px 10px 10px 10px;
  box-shadow: 0;
  transform: scale(0.95);
  transition: box-shadow 0.5s, transform 0.5s;
}
.card__wrapper:hover{
    transform: scale(1);
    box-shadow: 5px 20px 30px rgba(0,0,0,0.2);
  }

.box{
    width:100%;
    height:100%;
}
.top__box{
    height: 80%;
    width:100%;
  -webkit-background-size: 100%;
  -moz-background-size: 100%;
  -o-background-size: 100%;
  background-size: 100%;
}

.top__box img{
    object-fit: cover;
    width: 100%;
    height: 100%;
}
.bottom{
    width: 100%;
    height: 30%;
}

.bottom__box{
    height:100%;
    width: 100%;
    background: var(--white-color);
    position:relative;
}
.card__details{
    padding: 20px;
    margin-bottom: 15px;
}

.all-products .col-sm-12, 
.all-products .col-lg-4, 
.all-products .col-xl-3
.featured-card .col-sm-12, 
.featured-card .col-lg-4, 
.featured-card .col-xl-3{
    padding: 0;
}

/*------ Product Page ------*/

a.category-badge > span.badge:hover {
    background: #212529 !important;
    color: #fff !important;
}

.btt-button {
    height:42px;
    width: 42px;
    border-radius: 50%;
    position: fixed;
    bottom: 10px;
    right: 10px;
    background: var(--second-color);
}
.btt-button:hover{
    background: var(--first-color);
}

.btt-link{
    cursor: pointer;
}

/* Allauth form formatting */

.allauth-form-inner-content p {
    margin-top: 1.5rem; /* mt-4 */
    color: var(--second-color); /* text-secondary */
}

.allauth-form-inner-content input {
    border-color: var(--second-color);
    border-radius: 0;
}

.allauth-form-inner-content label:not([for='id_remember']) {
    display: none;
}

.allauth-form-inner-content input::placeholder {
    color: #aab7c4;
}

.allauth-form-inner-content button,
.allauth-form-inner-content input[type='submit'] {
	/* btn */
	display: inline-block;
    font-weight: 400;
    text-align: center;
    vertical-align: middle;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    padding: .375rem .75rem;
    font-size: 1rem;
    line-height: 1.5;
    border-radius: 0;
}

.allauth-form-inner-content button {
    background-color: var(--second-color);
    color: var(--white-color);
}

.allauth-form-inner-content a {
	color: #17a2b8; /* text-info */
}

/*------Product Form ------*/

.btn-file {
    position: relative;
    overflow: hidden;
}

.btn-file input[type="file"] {
    position: absolute;
    top: 0;
    right: 0;
    min-width: 100%;
    min-height: 100%;
    opacity: 0;
    cursor: pointer;
}

.custom-checkbox .custom-control-label::before {
    border-radius: 0;
    border-color: #dc3545;
}

.custom-checkbox .custom-control-input:checked~.custom-control-label::before {
    background-color: #dc3545;
    border-color: #dc3545;
    border-radius: 0;
}

/* ----- Media Queries ------- */

/* Slightly larger container on xl screens */
@media (min-width: 1200px) {
  .container {
    max-width: 80%;
  }
}

/* fixed top navbar only on medium and up */
@media (min-width: 992px) {
    .fixed-top-desktop-only {
        position: fixed;
        top: 0;
        right: 0;
        left: 0;
        z-index: 1030;
    }

    .header-container {
        padding-top: 164px;
    }
}

@media screen and (min-width: 768px) {
  body {
    margin: 0; 
    }
    .home{
    grid-template-columns: 4fr 3fr;
    grid-template-rows: 1fr;
     height: 100vh;
    }
    .home__about{
    grid-template-columns: 4fr 3fr;
    grid-template-rows: 1fr;
    height: 50vh;
    overflow: hidden;
    }
    .home__primary {
    justify-content: center;
    }
    .home__img img {
    position: absolute;
    width: 500px;
    height: 500px;
    top: 5%;
    left: 0;
    right: 0;
    bottom: 0;
    margin: auto;
    z-index: var(--z-normal);
    }
    .btn__hero{
    position: absolute;
    top: 80%;
    left: auto;
    right: 41%;
    margin: auto;
    z-index: var(--z-normal);
    background: var(--second-color);
    color: white;
    margin-top: 15px;
    }
    .home__year {
    writing-mode: vertical-rl;
    margin-left: 5rem;
    }
    .text__box {
    align-items: center;
    justify-items: center;
}
}

/* pad the top a bit when navbar is collapsed on mobile */
@media (max-width: 991px) {
    .header-container {
        padding-top: 16px;
    }

    body {
        height: calc(100vh - 116px);
    }

    .nav__bg{
        background-color: var(--white-color);
    }

    .display-4.logo-font.text-full {
        font-size: 2rem;
    }

    .nav-link {
        padding: 0.15rem;
    }

    .nav-link i.fa-lg {
        font-size: 1rem;
    }

    .navbar-toggler {
        padding: .6rem .6rem;
        font-size: 1rem;
        color: var(--second-color);
    }

    #delivery-banner h4 {
        font-size: .9rem;
    }

    .btn.btn-full.rounded-0 {
        padding: .375rem .375rem;
    }

    .btn.btn-full.rounded-0.btn-lg {
        padding: .375rem .375rem;
        font-size: .75rem;
    }

}

